# 163-pinn-american-options

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  american_pinn.py  backtest.py  data_loader.py  greeks.py  lsm_benchmark.py  requirements.txt  train.py  visualize.py
rust_pinn_american/: Cargo.toml
rust_pinn_american/benches/: pinn_bench.rs
rust_pinn_american/examples/: american_put_demo.rs  exercise_boundary.rs
rust_pinn_american/src/: lib.rs
